임대보증금 결측치 처리
임대보증금 결측치 처리

--- a/Final_Source_Code/임대보증금 결측치 처리.ipynb
+++ b/Final_Source_Code/임대보증금 결측치 처리.ipynb
@@ -1704,9 +1704,7 @@
    "source": [
     "li_st=[]\n",
     "all_df_0=all_df.loc[all_df['임대보증금']==0]\n",
-    "a=all_df_0.index\n",
-    "\n",
-    "\n"
+    "a=all_df_0.index\n"
    ]
   },
   {
@@ -1864,7 +1862,7 @@
     "X_test_df_log = X_test.apply(lambda x: np.log1p(x))\n",
     "y_train_df_log = y_train.apply(lambda x: np.log1p(x))\n",
     "y_test_df_log = y_test.apply(lambda x: np.log1p(x))\n",
-    "\n"
+    "#0과 1사이로 "
    ]
   },
   {
@@ -2237,6 +2235,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
